--- a/Tests/ImageDiff.Services.Tests/ImageDiff.Services.Tests.csproj
+++ b/Tests/ImageDiff.Services.Tests/ImageDiff.Services.Tests.csproj
@@ -7,17 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Moq" Version="4.12.0" />
-    <PackageReference Include="NSubstitute" Version="4.2.1" />
-    <PackageReference Include="nunit" Version="3.11.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="Moq" Version="4.12.0" />
+    <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.14.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ImageComparer.Common\ImageDiff.CommonAbstractions.csproj" />
-    <ProjectReference Include="..\ImageComparer.Data\ImageDiff.Data.csproj" />
-    <ProjectReference Include="..\ImageComparer.Services\ImageDiff.Services.csproj" />
+    <ProjectReference Include="..\..\ImageComparer.Common\ImageDiff.CommonAbstractions.csproj" />
+    <ProjectReference Include="..\..\ImageComparer.Data\ImageDiff.Data.csproj" />
+    <ProjectReference Include="..\..\ImageComparer.Services\ImageDiff.Services.csproj" />
   </ItemGroup>
 
   <ItemGroup>
